--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "phaser3-es6-webpack-boilerplate",
+  "name": "unicorn-shmup-game",
   "version": "1.0.0",
-  "description": "A boilerplate project for creating games with Phaser3, ES6 and Webpack",
+  "description": "Fun math trainer using Phaser3, ES6 and Webpack.",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --mode development",
     "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Jed Hastwell",
+  "author": "R.R. Nederhoed",
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.8.3",
@@ -24,6 +24,12 @@
     "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
-    "phaser": "^3.22.0"
+    "phaser": "^3.22.0",
+    "tern-phaser": "^0.2.0",
+    "ternjs": "^0.22.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/nederhoed/unicorn-shmup-game.git"
   }
 }
